[tool.poetry]
name = "taskmatrix"
version = "0.1.0"
description = ""
authors = ["Emmet Murphy <emmet@emurphy.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
langchain = "0.0.101"
torch = "2.0.1"
torchvision = "0.15.2"
wget = "3.2"
accelerate = "^0.26.1"
addict = "^2.4.0"
albumentations = "^1.3.1"
basicsr = "^1.4.2"
controlnet-aux = "^0.0.7"
diffusers = "^0.25.1"
einops = "^0.7.0"
gradio = "3.50.2"
imageio = "^2.33.1"
imageio-ffmpeg = "^0.4.9"
invisible-watermark = "^0.2.0"
kornia = "^0.7.1"
numpy = "^1.26.3"
omegaconf = "^2.3.0"
open-clip-torch = "^2.24.0"
openai = "^1.10.0"
opencv-python = "^4.9.0.80"
prettytable = "^3.9.0"
safetensors = "^0.4.2"
streamlit = "^1.30.0"
test-tube = "^0.7.5"
timm = "^0.9.12"
torchmetrics = "^1.3.0.post0"
transformers = "^4.37.2"
webdataset = "^0.2.86"
yapf = "^0.40.2"
segment-anything = {git = "https://github.com/facebookresearch/segment-anything.git"}
groundingdino-py = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
